--- a/catalog.html
+++ b/catalog.html
@@ -115,7 +115,7 @@
               <img src="img/img-sedona.jpg" width="360" height="576" alt="Макет Sedona">
             </figure>
             <div class="item-description">
-							<h3 class="title">Sedona</h3>
+							<h3 class="title"><a href="#">Sedona</a></h3>
 							<p class="description">
 								Информационный сайт<br>
 								для туристов
@@ -129,7 +129,7 @@
               <img src="img/img-pink.jpg" width="360" height="576" alt="Макет Pink">
             </figure>
             <div class="item-description">
-							<h3 class="title">Pink App</h3>
+							<h3 class="title"><a href="#">Pink App</a></h3>
 							<p class="description">
 								Продуктовый лендинг<br>
 								приложения для iOS и Android
@@ -143,7 +143,7 @@
               <img src="img/img-barbershop.jpg" width="360" height="576" alt="Макет Barbershop">
             </figure>
             <div class="item-description">
-							<h3 class="title">Barbershop</h3>
+							<h3 class="title"><a href="#">Barbershop</a></h3>
 							<p class="description">
 								Сайт салоны красоты.<br>
 								Для мужчин, да.
@@ -157,7 +157,7 @@
               <img src="img/img-mishka.jpg" width="360" height="576" alt="Макет Mishka">
             </figure>
             <div class="item-description">
-							<h3 class="title">MISHKA</h3>
+							<h3 class="title"><a href="#">MISHKA</a></h3>
 							<p class="description">
 								Интернет-магазин<br>
 								вязаных игрушек
@@ -171,7 +171,7 @@
               <img src="img/img-aplus.jpg" width="360" height="576" alt="Макет A+">
             </figure>
             <div class="item-description">
-							<h3 class="title">A Plus</h3>
+							<h3 class="title"><a href="#">A Plus</a></h3>
 							<p class="description">
 								Лендинг курсов повышения<br>
 								квалификации
@@ -185,7 +185,7 @@
               <img src="img/img-kvast.jpg" width="360" height="576" alt="Макет Кваст">
             </figure>
             <div class="item-description">
-							<h3 class="title">КВАСТ</h3>
+							<h3 class="title"><a href="#">КВАСТ</a></h3>
 							<p class="description">
 								Промо-сайт производителя<br>
 								крафтового кваса
@@ -222,14 +222,14 @@
       <section class="social">
         <div class="container clearfix">
           <div class="social-btns">
-            <a class="social-btn">
-              <span class="icon vk" href="#">Вконтакте</span>
+            <a class="social-btn" href="#">
+              <span class="icon vk">Вконтакте</span>
             </a>
-            <a class="social-btn">
-              <span class="icon fb" href="#">Фейсбук</span>
+            <a class="social-btn" href="#">
+              <span class="icon fb">Фейсбук</span>
             </a>
-            <a class="social-btn">
-              <span class="icon inst" href="#">Инстаграм</span>
+            <a class="social-btn" href="#">
+              <span class="icon inst">Инстаграм</span>
             </a>
           </div>
           <div class="promo-text">
@@ -243,6 +243,7 @@
     <section class="contact-block" hidden>
     	<h2 class="title">Напишите нам</h2>
     	<form class="contact-form clearfix" action="#" method="post">
+    		<button class="cross" type="button" title="Закрыть">Закрыть</button>
     		<div class="form-left">
 					<label for="user-name">Ваше имя:</label>
 					<input id="user-name" type="text" name="user-name" placeholder="Представьтесь, пожалуйста">
@@ -258,5 +259,6 @@
 				</div>
     	</form>
     </section>
+    <div class="overlay" hidden></div>
   </body>
 </html>
