--- a/catalog.html
+++ b/catalog.html
@@ -5,8 +5,7 @@
 		<title>HTML Academy: Нёрдс</title>
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
 		<link href="css/normalize.css" rel="stylesheet">
-		<link href="css/styles.min.css" rel="stylesheet">
-		<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
+		<link href="css/styles.css" rel="stylesheet">
 	</head>
 	
 	<body>
@@ -226,6 +225,7 @@
 						<a class="btn" href="form.html">Напишите нам</a>
 					</section>
 				</div>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1463.0666013640327!2d30.320533071210683!3d59.93866398844189!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca77c663%3A0xe2913435672b14c9!2s21Shop!5e0!3m2!1sru!2skz!4v1486822690291" width="100%" height="419" frameborder="0" style="border:0" allowfullscreen></iframe>
 			</section>
 
 			<section class="social">
@@ -263,7 +263,7 @@
 				</div>
 				<div class="form-bottom">
 					<label for="user-letter">Текст письма:</label>
-					<textarea id="user-letter" name="user-letter" rows="5" placeholder="В свободной форме" ></textarea>
+					<textarea id="user-letter" name="user-letter" rows="5" placeholder="В свободной форме" required></textarea>
 					<button class="btn">Отправить</button>
 				</div>
 			</form>
