--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<meta charset="utf-8">
 		<title>HTML Academy: Нёрдс</title>
 		<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
-		<link href="css/normalize.css" rel="stylesheet">
-		<link href="css/styles.css" rel="stylesheet">
+		<link href="css/normalize.min.css" rel="stylesheet">
+		<link href="css/styles.min.css" rel="stylesheet">
 	</head>
 
 	<body>
@@ -88,7 +88,6 @@
 								<a class="btn" href="#">Узнать больше</a>
 							</div>
 						</div>
-
 					</section>
 				</section>
 			</div>
@@ -164,10 +163,12 @@
 							<b>146<sup>%</sup></b>
 							<span>Уровень самоотдачи</span>
 						</div>
+
 						<div class="strengths-item">
 							<b>100<sup>%</sup></b>
 							<span>Соблюдение сроков</span>
 						</div>
+
 						<div class="strengths-item">
 							<b>50<sup>%</sup></b>
 							<span>Минимальная предоплата</span>
@@ -181,16 +182,19 @@
 							<img src="img/logo-1.png" width="199" height="68" alt="HTML Academy">
 						</a>
 					</figure>
+
 					<figure class="pic">
 						<a href="#">
 							<img src="img/logo-2.png" width="209" height="90" alt="Barbershop Borodinski">
 						</a>
 					</figure>
+
 					<figure class="pic">
 						<a href="#">
 							<img src="img/logo-3.png" width="185" height="52" alt="Pink">
 						</a>
 					</figure>
+
 					<figure class="pic">
 						<a href="#">
 							<img src="img/logo-4.png" width="173" height="84" alt="Mishka">
@@ -213,7 +217,8 @@
 						<a class="btn" href="form.html">Напишите нам</a>
 					</section>
 				</div>
-				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1463.0666013640327!2d30.320533071210683!3d59.93866398844189!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca77c663%3A0xe2913435672b14c9!2s21Shop!5e0!3m2!1sru!2skz!4v1486822690291" width="100%" height="419" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1463.0666013640327!2d30.320533071210683!3d59.93866398844189!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca77c663%3A0xe2913435672b14c9!2s21Shop!5e0!3m2!1sru!2skz!4v1486822690291" allowfullscreen></iframe>
 			</section>
 
 			<section class="social">
@@ -222,13 +227,16 @@
 						<a class="social-btn" href="#">
 							<span class="icon vk">Вконтакте</span>
 						</a>
+
 						<a class="social-btn" href="#">
 							<span class="icon fb">Фейсбук</span>
 						</a>
+
 						<a class="social-btn" href="#">
 							<span class="icon inst">Инстаграм</span>
 						</a>
 					</div>
+
 					<div class="promo-text">
 						<b class="slogan">Давайте дружить, это выгодно!</b>
 						<p class="description">Скидка 10% для друзей из социальных сетей.</p>
@@ -245,14 +253,16 @@
 					<label for="user-name">Ваше имя:</label>
 					<input id="user-name" type="text" name="user-name" placeholder="Представьтесь, пожалуйста" required>
 				</div>
+
 				<div class="form-right">
 					<label for="user-email">Ваш e-mail:</label>
 					<input id="user-email" type="text" name="user-email" placeholder="Для отправки ответа" required>
 				</div>
+
 				<div class="form-bottom">
 					<label for="user-letter">Текст письма:</label>
 					<textarea id="user-letter" name="user-letter" rows="5" placeholder="В свободной форме" required></textarea>
-					<button class="btn">Отправить</button>
+					<button class="btn" type="submit">Отправить</button>
 				</div>
 			</form>
 		</section>
